Radical Fix: Final deployment after renaming CSS file to theme-v3.css

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-cat << 'EOF' > index.html
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -8,7 +7,7 @@ cat << 'EOF' > index.html
     <meta name="description" content="موقع متخصص في وصفات الطبخ للمبتدئين خطوة بخطوة. وصفات سهلة، سريعة، وبالصور. تعلم الطبخ من الصفر مع شرح مبسط">
     <meta name="keywords" content="وصفات سهلة, طبخ للمبتدئين, أكلات يومية, وصفات سريعة, طبخ خطوة بخطوة, أكلات اقتصادية, وصفات عربية">
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@700&family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css?v=2">     <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="./theme-v3.css">     <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <header>
@@ -71,4 +70,3 @@ cat << 'EOF' > index.html
     <script src="script.js"></script>
 </body>
 </html>
-EOF
