Content Update: Updated arabic-food.html with new content.

--- a/arabic-food.html
+++ b/arabic-food.html
@@ -52,96 +52,103 @@
         <hr>
 
 
-        <h2 id="recipe-2">2. (نموذج للتعديل) اسم الوصفة العربية الثانية</h2>
+        <h2 id="recipe-2">2. طريقة عمل الكبسة السعودية بالدجاج</h2>
 
         <div class="details-box">
-            <p><strong>⚡ وقت التحضير:</strong> 15 دقيقة</p>
-            <p><strong>🔥 وقت الطهي:</strong> 35 دقيقة</p>
+            <p><strong>⚡ وقت التحضير:</strong> 25 دقيقة</p>
+            <p><strong>🔥 وقت الطهي:</strong> 70 دقيقة</p>
             <p><strong>🍽️ الوجبات:</strong> 6 أشخاص</p>
             <p><strong>المكونات الرئيسية:</strong></p>
             <ul>
-                <li>المكون الأول (يرجى التعديل)</li>
-                <li>المكون الثاني (يرجى التعديل)</li>
-                <li>المكون الثالث (يرجى التعديل)</li>
-                <li>المكون الرابع (يرجى التعديل)</li>
+                <li>دجاجة كاملة مقطعة</li>
+                <li>2 كوب أرز بسمتي مغسول</li>
+                <li>بصل، طماطم، وفلفل أخضر</li>
+                <li>بهارات كبسة (هيل، قرنفل، قرفة، لومي)</li>
             </ul>
         </div>
 
         <h3>خطوات التحضير بالتفصيل:</h3>
         <ul class="steps-list">
-            <li><strong>الخطوة 1:</strong> اكتب الخطوة الأولى هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 2:</strong> اكتب الخطوة الثانية هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 3:</strong> اكتب الخطوة الثالثة هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 4:</strong> اكتب الخطوة الرابعة هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
+            <li><strong>سلق الدجاج:</strong> شوّح الدجاج مع البصل ثم أضف الماء والبهارات الصحيحة والملح، واتركه يغلي حتى ينضج (حوالي 40 دقيقة).</li>
+            <li><strong>إعداد الأرز:</strong> أخرج الدجاج من المرقة. قم بتصفية المرقة وقياسها (تحتاج حوالي 4 أكواب). أضف الأرز البسمتي المغسول إلى المرقة المغلية.</li>
+            <li><strong>الطهي:</strong> عندما يغلي الأرز ويقل مستوى الماء، قم بتغطية القدر وخفّض النار إلى أدنى درجة. اتركه لمدة 25 دقيقة.</li>
+            <li><strong>تحمير الدجاج:</strong> ادهن الدجاج بقليل من الزيت والبهارات، وقم بتحميره في الفرن أو القلاية الهوائية حتى يصبح ذهبياً. قدّم الأرز وفوقه الدجاج المحمر.</li>
         </ul>
         <hr>
-        
-        <h2 id="recipe-3">3. (نموذج للتعديل) اسم الوصفة العربية الثالثة</h2>
+
+
+        <h2 id="recipe-3">3. طريقة عمل المندي اليمني بالدجاج (طريقة سهلة)</h2>
 
         <div class="details-box">
             <p><strong>⚡ وقت التحضير:</strong> 20 دقيقة</p>
-            <p><strong>🔥 وقت الطهي:</strong> 40 دقيقة</p>
+            <p><strong>🔥 وقت الطهي:</strong> 60 دقيقة</p>
             <p><strong>🍽️ الوجبات:</strong> 4 أشخاص</p>
             <p><strong>المكونات الرئيسية:</strong></p>
             <ul>
-                <li>المكون الأول (يرجى التعديل)</li>
-                <li>المكون الثاني (يرجى التعديل)</li>
-                <li>المكون الثالث (يرجى التعديل)</li>
+                <li>4 قطع دجاج (أفخاذ أو صدور)</li>
+                <li>2 كوب أرز بسمتي</li>
+                <li>بهارات المندي، وزعفران أو لون طعام أحمر/أصفر</li>
+                <li>بصلة مفرومة، فحم لعمل رائحة التدخين</li>
             </ul>
         </div>
 
         <h3>خطوات التحضير بالتفصيل:</h3>
         <ul class="steps-list">
-            <li><strong>الخطوة 1:</strong> اكتب الخطوة الأولى هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 2:</strong> اكتب الخطوة الثانية هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 3:</strong> اكتب الخطوة الثالثة هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
+            <li><strong>تتبيل الدجاج:</strong> تبّل الدجاج بالبهارات والملح والزيت واللون. يمكنك عمل شقوق بسيطة في الدجاج لتشرب التتبيلة.</li>
+            <li><strong>تحضير الأرز:</strong> قم بطهي الأرز نصف استواء بماء مغلي وملح. صفّ الأرز وضعه في قدر كبير أو صينية فرن.</li>
+            <li><strong>تجميع الطبقات:</strong> ضع قطع الدجاج المتبلة فوق الأرز (يفضل وضع شبك بينهما). غطِ القدر أو الصينية بإحكام بورق قصدير.</li>
+            <li><strong>الطهي بالفرن:</strong> أدخل القدر الفرن (حرارة 200 درجة مئوية) لمدة 60 دقيقة. عند الانتهاء، أشعل قطعة فحم وضعها في طبق صغير بالزيت داخل القدر وغطّه لـ 10 دقائق لتدخين المندي.</li>
         </ul>
         <hr>
 
-        <h2 id="recipe-4">4. (نموذج للتعديل) اسم الوصفة العربية الرابعة</h2>
+        <h2 id="recipe-4">4. طريقة عمل الشاورما المنزلية بالدجاج</h2>
+
+        <div class="details-box">
+            <p><strong>⚡ وقت التحضير:</strong> 30 دقيقة (مع التتبيل)</p>
+            <p><strong>🔥 وقت الطهي:</strong> 15 دقيقة</p>
+            <p><strong>🍽️ الوجبات:</strong> 4 أشخاص</p>
+            <p><strong>المكونات الرئيسية:</strong></p>
+            <ul>
+                <li>500 جرام صدور دجاج مقطعة شرائح رفيعة</li>
+                <li>بهارات الشاورما، زبادي، وليمون للتتبيل</li>
+                <li>خبز صاج أو خبز تورتيلا</li>
+                <li>مخللات، بطاطس مقلية، صوص الثومية</li>
+            </ul>
+        </div>
+
+        <h3>خطوات التحضير بالتفصيل:</h3>
+        <ul class="steps-list">
+            <li><strong>التتبيل:</strong> تبّل شرائح الدجاج بالزبادي والبهارات (بابريكا، كمون، كزبرة، ملح) وعصير الليمون، واتركها في الثلاجة ساعتين على الأقل.</li>
+            <li><strong>الطهي:</strong> سخّن مقلاة واسعة على نار عالية جداً. أضف شرائح الدجاج المتبلة وقم بتقليبها حتى تنضج وتكتسب لوناً ذهبياً.</li>
+            <li><strong>إعداد الثومية:</strong> يمكنك تحضير صوص الثومية (المايونيز والثوم والليمون) أو استخدام صوص جاهز.</li>
+            <li><strong>التجهيز واللف:</strong> افرد خبز الصاج، وادهنه بالثومية، أضف كمية من الدجاج والخضار والمخللات. قم بلف الساندويتش بإحكام ثم حمّره قليلاً على مقلاة مسطحة.</li>
+        </ul>
+        <hr>
+
+        <h2 id="recipe-5">5. طريقة عمل شوربة العدس بالشعرية</h2>
 
         <div class="details-box">
             <p><strong>⚡ وقت التحضير:</strong> 10 دقائق</p>
-            <p><strong>🔥 وقت الطهي:</strong> 25 دقيقة</p>
-            <p><strong>🍽️ الوجبات:</strong> 5 أشخاص</p>
-            <p><strong>المكونات الرئيسية:</strong></p>
-            <ul>
-                <li>المكون الأول (يرجى التعديل)</li>
-                <li>المكون الثاني (يرجى التعديل)</li>
-            </ul>
-        </div>
-
-        <h3>خطوات التحضير بالتفصيل:</h3>
-        <ul class="steps-list">
-            <li><strong>الخطوة 1:</strong> اكتب الخطوة الأولى هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 2:</strong> اكتب الخطوة الثانية هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 3:</strong> اكتب الخطوة الثالثة هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 4:</strong> اكتب الخطوة الرابعة هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 5:</strong> اكتب الخطوة الخامسة هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-        </ul>
-        <hr>
-
-        <h2 id="recipe-5">5. (نموذج للتعديل) اسم الوصفة العربية الخامسة</h2>
-
-        <div class="details-box">
-            <p><strong>⚡ وقت التحضير:</strong> 30 دقيقة</p>
-            <p><strong>🔥 وقت الطهي:</strong> 60 دقيقة</p>
+            <p><strong>🔥 وقت الطهي:</strong> 40 دقيقة</p>
             <p><strong>🍽️ الوجبات:</strong> 8 أشخاص</p>
             <p><strong>المكونات الرئيسية:</strong></p>
             <ul>
-                <li>المكون الأول (يرجى التعديل)</li>
-                <li>المكون الثاني (يرجى التعديل)</li>
+                <li>1 كوب عدس أحمر</li>
+                <li>2 جزر، 1 بصلة، 1 حبة بطاطس</li>
+                <li>4 أكواب مرق دجاج أو ماء</li>
+                <li>شعرية (اختياري)، كمون، وكركم</li>
             </ul>
         </div>
 
         <h3>خطوات التحضير بالتفصيل:</h3>
         <ul class="steps-list">
-            <li><strong>الخطوة 1:</strong> اكتب الخطوة الأولى هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 2:</strong> اكتب الخطوة الثانية هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 3:</strong> اكتب الخطوة الثالثة هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
+            <li><strong>التشويح:</strong> في قدر، شوّح البصل المفروم مع الجزر والبطاطس المقطعة والعدس المغسول جيداً، ثم أضف الكمون والكركم.</li>
+            <li><strong>الطهي:</strong> أضف المرق (أو الماء) واترك المزيج يغلي. خفّض النار وغطِ القدر لمدة 30 دقيقة أو حتى تنضج جميع الخضروات.</li>
+            <li><strong>الهرس:</strong> ارفع القدر من على النار وقم بهرس الشوربة باستخدام الخلاط اليدوي أو العادي حتى تصبح ناعمة تماماً.</li>
+            <li><strong>إضافة الشعرية:</strong> أعد الشوربة إلى النار. أضف الشعرية واتركها تغلي حتى تنضج الشعرية (حوالي 5 دقائق). تُقدم ساخنة مع الليمون والخبز المحمص.</li>
         </ul>
         <hr>
-
+        
         <h2 id="recipe-6">6. (نموذج للتعديل) اسم الوصفة العربية السادسة</h2>
 
         <div class="details-box">
