--- a/arabic-food.html
+++ b/arabic-food.html
@@ -149,111 +149,119 @@
         </ul>
         <hr>
         
-        <h2 id="recipe-6">6. (نموذج للتعديل) اسم الوصفة العربية السادسة</h2>
+        <h2 id="recipe-6">6. طريقة عمل المقلوبة بالدجاج والباذنجان</h2>
 
         <div class="details-box">
-            <p><strong>⚡ وقت التحضير:</strong> 5 دقائق</p>
+            <p><strong>⚡ وقت التحضير:</strong> 35 دقيقة</p>
+            <p><strong>🔥 وقت الطهي:</strong> 90 دقيقة</p>
+            <p><strong>🍽️ الوجبات:</strong> 6 أشخاص</p>
+            <p><strong>المكونات الرئيسية:</strong></p>
+            <ul>
+                <li>دجاجة مقطعة أو لحم غنم</li>
+                <li>2 كوب أرز مصري أو بسمتي</li>
+                <li>2 حبة باذنجان مقطع شرائح</li>
+                <li>توابل المقلوبة (هيل، قرفة، بهارات مشكلة)</li>
+            </ul>
+        </div>
+
+        <h3>خطوات التحضير بالتفصيل:</h3>
+        <ul class="steps-list">
+            <li><strong>إعداد الخضار:</strong> قلّي شرائح الباذنجان والبطاطس والزهرة (اختياري) حتى يصبح لونها ذهبياً. ضعها جانباً.</li>
+            <li><strong>طهي الدجاج/اللحم:</strong> اسلق الدجاج أو اللحم مع التوابل الصحيحة والبصل حتى ينضج. احتفظ بالمرق.</li>
+            <li><strong>ترتيب القدر:</strong> في قدر كبير، ضع شرائح الباذنجان في القاع وعلى الجوانب. ثم ضع قطع الدجاج/اللحم، والخضروات المقلية، وفوقها الأرز المتبل بالبهارات.</li>
+            <li><strong>الطهي والقلب:</strong> أضف مرق الدجاج المغلي حتى يغطي الأرز بمسافة 2 سم. اتركها تغلي ثم خفّض النار لمدة 45 دقيقة. عند التقديم، اقلب القدر مباشرة على طبق كبير.</li>
+        </ul>
+        <hr>
+
+        <h2 id="recipe-7">7. طريقة عمل الكبة المقلية باللحم والصنوبر</h2>
+
+        <div class="details-box">
+            <p><strong>⚡ وقت التحضير:</strong> 60 دقيقة</p>
             <p><strong>🔥 وقت الطهي:</strong> 15 دقيقة</p>
-            <p><strong>🍽️ الوجبات:</strong> 2 أشخاص</p>
+            <p><strong>🍽️ الوجبات:</strong> 10-12 قطعة</p>
             <p><strong>المكونات الرئيسية:</strong></p>
             <ul>
-                <li>المكون الأول (يرجى التعديل)</li>
-                <li>المكون الثاني (يرجى التعديل)</li>
+                <li>500 جرام برغل ناعم</li>
+                <li>250 جرام لحم مفروم ناعم (للعجينة)</li>
+                <li>الحشوة: لحم مفروم خشن مقلي، بصل، صنوبر، بهارات</li>
             </ul>
         </div>
 
         <h3>خطوات التحضير بالتفصيل:</h3>
         <ul class="steps-list">
-            <li><strong>الخطوة 1:</strong> اكتب الخطوة الأولى هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 2:</strong> اكتب الخطوة الثانية هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 3:</strong> اكتب الخطوة الثالثة هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 4:</strong> اكتب الخطوة الرابعة هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
+            <li><strong>إعداد العجينة:</strong> انقع البرغل ثم صفّه واعجنه جيداً مع اللحم المفروم الناعم والتوابل (الملح، الكمون). يمكنك استخدام ماكينة الكبة إذا توفرت.</li>
+            <li><strong>تحضير الحشوة:</strong> قلّي البصل المفروم، أضف اللحم المفروم حتى يتغير لونه وينضج. تبّله وأضف الصنوبر.</li>
+            <li><strong>التشكيل والحشو:</strong> خذ قطعة صغيرة من عجينة الكبة واعمل تجويفاً بإصبعك. املأه بالحشوة وأغلقه وشكله على شكل بيضاوي مدبب.</li>
+            <li><strong>القلي:</strong> سخّن زيت غزير على درجة حرارة متوسطة إلى عالية. اقلي حبات الكبة حتى يصبح لونها بنياً ذهبياً. تُقدم ساخنة.</li>
         </ul>
         <hr>
 
-        <h2 id="recipe-7">7. (نموذج للتعديل) اسم الوصفة العربية السابعة</h2>
+        <h2 id="recipe-8">8. طريقة عمل ورق العنب (يالنجي)</h2>
 
         <div class="details-box">
-            <p><strong>⚡ وقت التحضير:</strong> 25 دقيقة</p>
-            <p><strong>🔥 وقت الطهي:</strong> 50 دقيقة</p>
-            <p><strong>🍽️ الوجبات:</strong> 7 أشخاص</p>
+            <p><strong>⚡ وقت التحضير:</strong> 60 دقيقة</p>
+            <p><strong>🔥 وقت الطهي:</strong> 90 دقيقة</p>
+            <p><strong>🍽️ الوجبات:</strong> 8 أشخاص</p>
             <p><strong>المكونات الرئيسية:</strong></p>
             <ul>
-                <li>المكون الأول (يرجى التعديل)</li>
-                <li>المكون الثاني (يرجى التعديل)</li>
+                <li>برطمان ورق عنب مخلل</li>
+                <li>الحشوة: أرز مصري، طماطم، بقدونس، نعناع، زيت زيتون، بهارات</li>
             </ul>
         </div>
 
         <h3>خطوات التحضير بالتفصيل:</h3>
         <ul class="steps-list">
-            <li><strong>الخطوة 1:</strong> اكتب الخطوة الأولى هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 2:</strong> اكتب الخطوة الثانية هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 3:</strong> اكتب الخطوة الثالثة هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 4:</strong> اكتب الخطوة الرابعة هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
+            <li><strong>تحضير الأوراق:</strong> إذا كان الورق معلباً، يجب شطفه جيداً بالماء المغلي والبارد. إذا كان طازجاً، يُسلق لمدة 5 دقائق.</li>
+            <li><strong>تحضير الحشوة:</strong> اخلط جميع مكونات الحشوة (الأرز، الخضار المفرومة، الزيت، والبهارات).</li>
+            <li><strong>اللف:</strong> افرد ورقة العنب وضع كمية صغيرة من الحشوة في المنتصف. اثنِ الجوانب ثم ابدأ باللف بإحكام من الأسفل للأعلى.</li>
+            <li><strong>الطهي:</strong> رتب الورق الملفوف في قدر. غطّه بمرق ماء وليمون. ضع طبقاً ثقيلاً فوقه لمنع تفككه. يُترك على نار هادئة لمدة 90 دقيقة حتى ينضج.</li>
         </ul>
         <hr>
 
-        <h2 id="recipe-8">8. (نموذج للتعديل) اسم الوصفة العربية الثامنة</h2>
+        <h2 id="recipe-9">9. طريقة عمل المسقعة المصرية بالباذنجان</h2>
 
         <div class="details-box">
-            <p><strong>⚡ وقت التحضير:</strong> 12 دقيقة</p>
-            <p><strong>🔥 وقت الطهي:</strong> 30 دقيقة</p>
+            <p><strong>⚡ وقت التحضير:</strong> 20 دقيقة</p>
+            <p><strong>🔥 وقت الطهي:</strong> 40 دقيقة</p>
             <p><strong>🍽️ الوجبات:</strong> 4 أشخاص</p>
             <p><strong>المكونات الرئيسية:</strong></p>
             <ul>
-                <li>المكون الأول (يرجى التعديل)</li>
-                <li>المكون الثاني (يرجى التعديل)</li>
+                <li>2 حبة باذنجان كبيرة مقطعة ومقلية</li>
+                <li>لحم مفروم (اختياري)</li>
+                <li>صلصة طماطم كثيفة، ثوم، فلفل أخضر حار</li>
             </ul>
         </div>
 
         <h3>خطوات التحضير بالتفصيل:</h3>
         <ul class="steps-list">
-            <li><strong>الخطوة 1:</strong> اكتب الخطوة الأولى هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 2:</strong> اكتب الخطوة الثانية هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
+            <li><strong>قلي الباذنجان:</strong> قطّع الباذنجان واقليه حتى يصبح ذهبياً. صفّه جيداً من الزيت الزائد.</li>
+            <li><strong>إعداد الصلصة:</strong> قم بتشويح الثوم المفروم والفلفل الحار في القليل من الزيت. أضف عصير الطماطم، الملح، والكمون. إذا كنت تستخدم لحماً مفروم، قلّيه مع البصل أولاً.</li>
+            <li><strong>تجميع الطبقات:</strong> في صينية فرن، ضع طبقة من صلصة الطماطم، ثم طبقة من الباذنجان المقلي، وطبقة من اللحم المفروم (إذا استخدمته)، ثم غطِ بطبقة أخيرة من الصلصة.</li>
+            <li><strong>الخبز والتقديم:</strong> أدخل الصينية الفرن لمدة 20 دقيقة حتى تتسبك المكونات. تُقدم ساخنة أو فاترة مع الخبز.</li>
         </ul>
         <hr>
 
-        <h2 id="recipe-9">9. (نموذج للتعديل) اسم الوصفة العربية التاسعة</h2>
-
-        <div class="details-box">
-            <p><strong>⚡ وقت التحضير:</strong> 18 دقيقة</p>
-            <p><strong>🔥 وقت الطهي:</strong> 45 دقيقة</p>
-            <p><strong>🍽️ الوجبات:</strong> 5 أشخاص</p>
-            <p><strong>المكونات الرئيسية:</strong></p>
-            <ul>
-                <li>المكون الأول (يرجى التعديل)</li>
-                <li>المكون الثاني (يرجى التعديل)</li>
-            </ul>
-        </div>
-
-        <h3>خطوات التحضير بالتفصيل:</h3>
-        <ul class="steps-list">
-            <li><strong>الخطوة 1:</strong> اكتب الخطوة الأولى هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 2:</strong> اكتب الخطوة الثانية هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 3:</strong> اكتب الخطوة الثالثة هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-        </ul>
-        <hr>
-
-        <h2 id="recipe-10">10. (نموذج للتعديل) اسم الوصفة العربية العاشرة</h2>
+        <h2 id="recipe-10">10. طريقة عمل سلطة الفتوش المنعشة</h2>
 
         <div class="details-box">
             <p><strong>⚡ وقت التحضير:</strong> 15 دقيقة</p>
-            <p><strong>🔥 وقت الطهي:</strong> 30 دقيقة</p>
+            <p><strong>🔥 وقت الطهي:</strong> لا يوجد (بدون طهي)</p>
             <p><strong>🍽️ الوجبات:</strong> 4 أشخاص</p>
             <p><strong>المكونات الرئيسية:</strong></p>
             <ul>
-                <li>المكون الأول (يرجى التعديل)</li>
-                <li>المكون الثاني (يرجى التعديل)</li>
-                <li>المكون الثالث (يرجى التعديل)</li>
+                <li>خس، خيار، طماطم، فلفل أخضر، وبصل أحمر</li>
+                <li>خبز عربي مقلي أو محمص</li>
+                <li>أوراق نعناع طازجة وبقدونس</li>
+                <li>الصلصة: زيت زيتون، دبس رمان، ليمون، سماق</li>
             </ul>
         </div>
 
         <h3>خطوات التحضير بالتفصيل:</h3>
         <ul class="steps-list">
-            <li><strong>الخطوة 1:</strong> اكتب الخطوة الأولى هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 2:</strong> اكتب الخطوة الثانية هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 3:</strong> اكتب الخطوة الثالثة هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
-            <li><strong>الخطوة 4:</strong> اكتب الخطوة الرابعة هنا بالتفصيل وبشكل مبسط (يرجى التعديل).</li>
+            <li><strong>تحضير الخضروات:</strong> قطّع جميع الخضروات إلى قطع متوسطة الحجم. افرم البقدونس والنعناع.</li>
+            <li><strong>تحضير الصلصة:</strong> اخلط مكونات الصلصة (زيت الزيتون، دبس الرمان، عصير الليمون، السماق، والملح) جيداً في وعاء صغير.</li>
+            <li><strong>تجهيز الخبز:</strong> يمكنك قلي قطع الخبز العربي أو تحميصها في الفرن حتى تصبح مقرمشة.</li>
+            <li><strong>التجميع:</strong> ضع الخضروات المقطعة في طبق التقديم. صب الصلصة فوقها مباشرة قبل التقديم، ثم زيّن الوجه بقطع الخبز المقرمشة.</li>
         </ul>
         <hr>
         
