FEATURE: Added site deployment link to index.html.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>📖 دليل الطبخ للمبتدئين</h1>
+        <p class="site-url-link">🌐 رابط الموقع النهائي: <a href="https://cooking-beginners.vercel.app/" target="_blank">https://cooking-beginners.vercel.app/</a></p>
         <p>اكتشف 100 وصفة سهلة ومضمونة مقسمة إلى 5 أقسام رئيسية</p>
     </header>
 
