SEO: Final push of sitemap, corrected index.html (Meta Tags, fixed font link), and PWA icons.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الرئيسية - وصفات طبخ للمبتدئين</title>
+    <!-- START SEO Meta Tags -->
+    <meta name="description" content="دليل الطبخ للمبتدئين: اكتشف 100 وصفة سهلة وسريعة ومضمونة. أكلات عربية، حلويات، ووصفات عالمية للمبتدئين.">
+    <meta name="keywords" content="وصفات طبخ, طبخ للمبتدئين, اكلات سريعة, اكلات عربية, حلويات سهلة, وصفات صحية, مطبخ">
+    <!-- END SEO Meta Tags -->
+    <!-- رابط الخطوط الآن موجود مرة واحدة فقط -->
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@700&family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./theme-v3.css">
     <link rel="manifest" href="manifest.json">
@@ -28,26 +33,31 @@
 
     <main class="sections-grid">
         
+        <!-- بطاقة الأكلات العربية -->
         <a href="arabic-food.html" class="card">
             <h2>🍛 الأكلات العربية (20 وصفة)</h2>
             <p>من المندي إلى الكبسة: أطباق تقليدية بخطوات بسيطة.</p>
         </a>
 
+        <!-- بطاقة الوصفات السريعة -->
         <a href="quick-recipes.html" class="card">
             <h2>⚡ وصفات سريعة (20 وصفة)</h2>
             <p>وجبات لا تستغرق أكثر من 30 دقيقة، مثالية لليوم المزدحم.</p>
         </a>
 
+        <!-- بطاقة الطعام الصحي -->
         <a href="healthy-food.html" class="card">
             <h2>🥗 طعام صحي (20 وصفة)</h2>
             <p>وجبات خفيفة، قليلة السعرات، وغنية بالعناصر الغذائية.</p>
         </a>
 
+        <!-- بطاقة الحلويات -->
         <a href="desserts.html" class="card">
             <h2>🍰 حلويات شهية (20 وصفة)</h2>
             <p>حلويات باردة ومخبوزات سهلة للمناسبات أو التحلية اليومية.</p>
         </a>
 
+        <!-- بطاقة الأكلات العالمية -->
         <a href="international.html" class="card">
             <h2>🌍 أكلات عالمية (20 وصفة)</h2>
             <p>اكتشف أطباقاً عالمية مشهورة من إيطاليا والمكسيك والصين.</p>
