SEO: Added specific Meta Tags to Arabic and Quick Recipes pages.

--- a/arabic-food.html
+++ b/arabic-food.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الأكلات العربية - وصفات طبخ للمبتدئين</title>
+        <meta name="description" content="اكتشف 20 وصفة أكلات عربية تقليدية سهلة للمبتدئين. أطباق رئيسية مشهورة من الخليج والشام، مثل الكبسة والمنسف.">
+            <meta name="keywords" content="اكلات عربية, طبخ عربي, وصفات شرقية, كبسة, مندي, منسف, اطباق تقليدية">
+                <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@700&family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">    
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@700&family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./theme-v3.css">
     <link rel="manifest" href="manifest.json">
