--- a/quick-recipes.html
+++ b/quick-recipes.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>وصفات سريعة - طبخ للمبتدئين</title>
+    <title>وصفات سريعة - دليل الطبخ للمبتدئين</title>
+        <meta name="description" content="أكثر من 20 وصفة سريعة وسهلة التحضير لا تتطلب أكثر من 30 دقيقة. مثالية للوجبات اليومية المزدحمة وطلاب الجامعات.">
+            <meta name="keywords" content="وصفات سريعة, اكلات 30 دقيقة, طبخ سريع, وجبات عشاء سريعة, وصفات طلاب">
+                <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@700&family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@700&family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./theme-v3.css">
     <link rel="manifest" href="manifest.json">
