SEO: Added specific Meta Tags to Healthy Food, Desserts, and International pages.

--- a/desserts.html
+++ b/desserts.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>حلويات - وصفات طبخ للمبتدئين</title>
+    <title>حلويات شهية - وصفات طبخ للمبتدئين</title>
+        <meta name="description" content="مجموعة من 20 وصفة حلويات سهلة وسريعة للمبتدئين. حلويات باردة، كيكات بسيطة، وحلى منزلي بدون تعقيد.">
+            <meta name="keywords" content="حلويات سهلة, وصفات حلويات, حلى سريع, كيك سهل, حلويات باردة, تحلية بسيطة">
+                <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@700&family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@700&family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./theme-v3.css">
     <link rel="manifest" href="manifest.json">
