--- a/healthy-food.html
+++ b/healthy-food.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الطعام الصحي - وصفات طبخ للمبتدئين</title>
+   	<title>طعام صحي - دليل الطبخ للمبتدئين</title>
+	    <meta name="description" content="أكثر من 20 وصفة طعام صحي سهلة التحضير وقليلة السعرات. وصفات للرجيم، وجبات غداء خفيفة، وأفكار لتناول طعام متوازن.">
+	        <meta name="keywords" content="طعام صحي, وصفات للرجيم, وجبات قليلة السعرات, طبخ صحي, طعام متوازن">
+	            <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@700&family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@700&family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./theme-v3.css">
     <link rel="manifest" href="manifest.json">
