--- a/international.html
+++ b/international.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>أكلات عالمية - وصفات طبخ للمبتدئين</title>
+	<title>أكلات عالمية - وصفات طبخ للمبتدئين</title>
+	    <meta name="description" content="مجموعة من 20 وصفة أكلات عالمية مشهورة وسهلة التحضير. اكتشف وصفات المطبخ الإيطالي، المكسيكي، والآسيوي المناسبة للمبتدئين.">
+	        <meta name="keywords" content="وصفات عالمية, اكلات ايطالية, باستا, تاكو, اكلات مكسيكية, طبخ صيني, اكلات مشهورة">
+	            <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@700&family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@700&family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./theme-v3.css">
     <link rel="manifest" href="manifest.json">
