SEO: Applied any remaining structural changes or Schema updates to the homepage.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الرئيسية - وصفات طبخ للمبتدئين</title>
+	<meta name="google-site-verification" content="1YBP2sbUMH1uIADFn88vYgs-UHOOlEoYkxtp9tixugE" />
     <!-- START SEO Meta Tags -->
     <meta name="description" content="دليل الطبخ للمبتدئين: اكتشف 100 وصفة سهلة وسريعة ومضمونة. أكلات عربية، حلويات، ووصفات عالمية للمبتدئين.">
     <meta name="keywords" content="وصفات طبخ, طبخ للمبتدئين, اكلات سريعة, اكلات عربية, حلويات سهلة, وصفات صحية, مطبخ">
