STYLE: Minor styling updates in index and theme for new image display.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الرئيسية - وصفات طبخ للمبتدئين</title>
-	<meta name="google-site-verification" content="1YBP2sbUMH1uIADFn88vYgs-UHOOlEoYkxtp9tixugE" />
+    <meta name="google-site-verification" content="1YBP2sbUMH1uIADFn88vYgs-UHOOlEoYkxtp9tixugE" />
     <!-- START SEO Meta Tags -->
     <meta name="description" content="دليل الطبخ للمبتدئين: اكتشف 100 وصفة سهلة وسريعة ومضمونة. أكلات عربية، حلويات، ووصفات عالمية للمبتدئين.">
     <meta name="keywords" content="وصفات طبخ, طبخ للمبتدئين, اكلات سريعة, اكلات عربية, حلويات سهلة, وصفات صحية, مطبخ">
@@ -33,15 +33,15 @@
     </nav>
 
     <main class="sections-grid">
-        
+
         <!-- بطاقة الأكلات العربية -->
         <a href="arabic-food.html" class="card">
             <h2>🍛 الأكلات العربية (20 وصفة)</h2>
             <p>من المندي إلى الكبسة: أطباق تقليدية بخطوات بسيطة.</p>
         </a>
 
-        <!-- بطاقة الوصفات السريعة -->
-        <a href="quick-recipes.html" class="card">
+        <!-- التعديل هنا: إضافة الفئة card-quick-recipes -->
+        <a href="quick-recipes.html" class="card card-quick-recipes">
             <h2>⚡ وصفات سريعة (20 وصفة)</h2>
             <p>وجبات لا تستغرق أكثر من 30 دقيقة، مثالية لليوم المزدحم.</p>
         </a>
